--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -88,7 +88,7 @@
         <div class="row g-4">
             <div class="col-md-4">
                 <div class="card h-100">
-                    <div class="card-header bg-primary text-white">
+                    <div class="card-header-blue bg-primary text-white">
                         <h5 class="mb-0">Code History</h5>
                     </div>
                     <div class="card-body" style="overflow-y: auto; max-height: 500px;">
@@ -120,7 +120,7 @@
             </div>
             <div class="col-md-8">
                 <div class="card h-100">
-                    <div class="card-header bg-primary text-white">
+                    <div class="card-header-blue bg-primary text-white">
                         <h5 class="mb-0 d-inline">Code Preview</h5>
                         <div class="btn-group float-end" role="group">
                             <button type="button" class="btn btn-sm btn-outline-light active" data-view="code">Code</button>
