--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -81,7 +81,7 @@
 
         <!-- Danger Zone Card -->
         <div class="card border-danger mb-5 shadow">
-          <div class="card-header bg-danger text-white">
+          <div class="card-header-red bg-danger text-white">
             <h4 class="mb-0">Danger Zone</h4>
           </div>
           <div class="card-body">
