--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -105,7 +105,7 @@
       <section class="output-section" id="output-section">
         <div class="d-flex justify-content-between mb-3">
           <button id="switchViewBtn" class="btn btn-sm clarifai-btn">Switch to Graphical View</button>
-          <button id="showAllBtn" class="clarifai-btn">Show All Comments</button>
+          <button id="showAllBtn" class="clarifai-btn btn btn-sm">Show All Comments</button>
         </div>
         <div class="container-fluid code-form" style="margin-bottom: 40px; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.1);">
           <div class="output-container"> <!-- Bootstrap grid row with gap -->
