--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -57,8 +57,8 @@
                   Models
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="{{ url_for('main.home') }}#main-section">Comment Generator</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('main.home') }}#main-section">AST Generator</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('main.model_page') }}">Comment Generator</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('main.model_page') }}">AST Generator</a></li>
                 </ul>
               </li>
               <li class="nav-item">
