--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -13,17 +13,19 @@
             }
         });
     </script>
-    <title>Dashboard - ClarifAI</title>
+    <title>Dashboard - Clarifai</title>
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container-fluid" style="max-width: 1400px; width: 100%;">
       <!-- NavBar -->
       <nav class="navbar navbar-expand-lg bg-body-tertiary shadow custom-navbar fixed-top" data-bs-theme="light" id="mainNavbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{{ url_for('main.home') }}#hero-section">ClarifAI</a>
+          <a class="navbar-brand" href="{{ url_for('main.home') }}#hero-section">Clarifai</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -77,7 +79,7 @@
       <!-- Dashboard Content -->
       <section class="dashboard-section">
         <div class="welcome-text align-self-start mb-4">
-          <h2>Welcome, <span class="text-clarifai">{{ username }}</span></h2>
+          <h2>Welcome, <span class="text-gradient">{{ username }}</span></h2>
           <div class="align-self-start mb-4">
             <p>View and manage your code submissions.</p>
           </div>
