--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,14 +6,16 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="login-page" id="login-page">
       <div class="container-fluid" style="max-width: 1400px; width: 100%;">
         <div class="container mt-5" style="max-width: 500px;  margin : 30px auto;">
           <div class="card shadow">
-            <div class="card-body">
-              <h2 class="text-center mb-4 login-label">Login to <span class="text-clarifai">ClarifAI</span></h2>
+            <div class="card-body log-sign-card">
+              <h2 class="text-center mb-4 login-label">Login to <span class="text-clarifai">Clarifai</span></h2>
               {% if error %}
                 <div class="alert alert-danger">{{ error }}</div>
               {% endif %}
