--- a/app/templates/model.html
+++ b/app/templates/model.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
   </head>
   <script src="https://d3js.org/d3.v7.min.js"></script>
 <body>
@@ -14,7 +16,7 @@
       <!-- NavBar -->
       <nav class="navbar navbar-expand-lg bg-body-tertiary shadow custom-navbar fixed-top" data-bs-theme="light" id="mainNavbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#hero-section">ClarifAI</a>
+          <a class="navbar-brand" href="#hero-section">Clarifai</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
