--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -6,12 +6,14 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="signup-page" id="signup-page">
       <div class="container mt-5" style="max-width: 500px;">
         <div class="card shadow">
-          <div class="card-body">
+          <div class="card-body log-sign-card">
             <h2 class="text-center mb-4">Create <span class="text-clarifai">Clarifai</span> Account</h2>
             {% if error %}
               <div class="alert alert-danger">{{ error }}</div>
