--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div class="container-fluid" style="max-width: 1400px; width: 100%;">
+      {% include 'components/navbar.html' %}
+    </div>
     <div class="login-page" id="login-page">
       <div class="container-fluid" style="max-width: 1400px; width: 100%;">
         <div class="container mt-5" style="max-width: 500px;  margin : 30px auto;">
