--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -20,59 +20,8 @@
   </head>
   <body>
     <div class="container-fluid" style="max-width: 1400px; width: 100%;">
-      <!-- Reuse your existing navbar -->
-      <nav class="navbar navbar-expand-lg bg-body-tertiary shadow custom-navbar fixed-top" data-bs-theme="light" id="mainNavbar">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="{{ url_for('main.home') }}#hero-section">Clarifai</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('main.home') }}">Home</a>
-              </li>
-              {% if current_user.is_authenticated %}
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Account
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li class="nav-item">
-                      <a class="nav-link" href="{{ url_for('main.settings') }}">Settings</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link text-danger" href="{{ url_for('auth.logout') }}">Logout</a>
-                    </li>
-                  </ul>
-                </li>
-              {% else %}
-                <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('auth.signup') }}">Sign Up</a>
-                </li>
-              {% endif %}
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Models
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="{{ url_for('main.model_page') }}">Comment Generator</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('main.model_page') }}">AST Generator</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('main.dashboard') }}">Dashboard</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+      <!-- NavBar -->
+      {% include 'components/navbar.html' %}
 
       <!-- Settings Content -->
       <section class="settings-section" style="padding: 20px; padding-top: 80px;">
